@@ -87,6 +87,11 @@ in a database at once (optionally including Protected Entries).</td>
 <td>Multiple Password Policies can now be defined, managed and
 selected in entries to generate passwords.</td>
 </tr>
+<tr>
+
+<td align="center" width="100">n/a</td>
+<td>Partial support for Czech has been added, thanks to butchtik.</td>
+</tr>
 </tbody>
 </table>
 
